clang/test/BSC/Negative/Ownership/ArrayElem/arrayelem_invalid_casts/arrayelem_invalid_casts.cbs
// RUN: %clang_cc1 -fsyntax-only -verify=expected %s

void test_borrow_casts(int raw[4], int x) {
  int *_Borrow plain = &_Mut x;
  int *_Borrow _ArrayElem p = &_Mut raw[0];
  int *_Borrow _ArrayElem q = (int *_Borrow _ArrayElem)plain; // expected-error {{incompatible _Borrow types, cannot cast 'int *_Borrow' to 'int *_Borrow _ArrayElem'}}
  int *_Borrow plain2 = p; // ok
  int *_Borrow plain3 = (int *_Borrow)p; // ok
}

void test_owned_casts_1(int *_Owned _ArrayElem owned_array) {
  int *_Owned owned_plain = (int *_Owned)owned_array; // expected-error {{incompatible _Owned types, cannot cast 'int *_Owned _ArrayElem' to 'int *_Owned'}}
  (void)owned_plain;
}

void test_owned_casts_2(int *raw) {
  int *_Owned owned_plain = __take_from_raw(raw);
  int *_Owned _ArrayElem owned_array= (int *_Owned _ArrayElem)owned_plain; // expected-error {{incompatible _Owned types, cannot cast 'int *_Owned' to 'int *_Owned _ArrayElem'}}
  (void)owned_plain;
}

void test_owned_array_raw_casts_1(int *raw) {
  int *_Owned _ArrayElem owned_array =
      (int *_Owned _ArrayElem)raw; // expected-error {{cannot cast between _Owned _ArrayElem and raw pointer; use __move_array_to_raw or __take_array_from_raw for ownership transfer}}
  (void)owned_array;
}

void test_owned_array_raw_casts_2(int *_Owned _ArrayElem owned_array) {
  int *raw =
      (int *)owned_array; // expected-error {{cannot cast between _Owned _ArrayElem and raw pointer; use __move_array_to_raw or __take_array_from_raw for ownership transfer}}
  (void)raw;
}
